[package]
name = "procmonitor"
version = "0.1.0"
authors = ["katyamag <pupupu0701@gmail.com>"]
description = "Simple process monitor cli"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
procfs = "0.5.3"
clap = "2.33.0"
